--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: "#0f0f0f";
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #0f0f0f;
 }
 
 ::-webkit-scrollbar {
